<resources>
    <string name="app_name">Calculadora</string>
    <string name="plus_sign">+</string>
    <string name="minus_sign">-</string>
    <string name="multiply_sign">*</string>
    <string name="divide_sign">/</string>
    <string name="power_sign">^</string>
    <string name="square_sign">SQRT</string>
    <string name="equals_sign">=</string>
    <string name="dot">.</string>
    <string name="reset">C</string>
    <string name="number_0">0</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
</resources>
