<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/activity_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|right"
    android:orientation="vertical">
    <TextView
        android:id="@+id/visor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_view_text_size"
        android:text="@string/number_0" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button7"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/number_7" />
        <Button
            android:id="@+id/button8"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/number_8" />
        <Button
            android:id="@+id/button9"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/number_9" />
        <Button
            android:id="@+id/buttonSuma"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/plus_sign" />
        <Button
            android:id="@+id/buttonResta"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/minus_sign" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button4"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/number_4" />
        <Button
            android:id="@+id/button5"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/number_5" />
        <Button
            android:id="@+id/button6"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/number_6" />
        <Button
            android:id="@+id/buttonMultiplica"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:textSize="@dimen/button_text_size"
            android:text="@string/multiply_sign" />
        <Button
            android:id="@+id/buttonDivide"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/divide_sign" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button1"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/number_1" />
        <Button
            android:id="@+id/button2"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/number_2" />
        <Button
            android:id="@+id/button3"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/number_3" />
        <Button
            android:id="@+id/buttonPotencia"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:textSize="@dimen/button_text_size"
            android:text="@string/power_sign" />
        <Button
            android:id="@+id/buttonRaiz"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/square_sign" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Space
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/button0"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/number_0" />
        <Button
            android:id="@+id/buttonC"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/reset" />
        <Button
            android:id="@+id/buttonPunto"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:textSize="@dimen/button_text_size"
            android:text="@string/dot" />
        <Button
            android:id="@+id/buttonIgual"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:textSize="@dimen/button_text_size"
            android:text="@string/equals_sign" />
    </LinearLayout>
</LinearLayout>
